--- a/src/styles/settings/_design.scss
+++ b/src/styles/settings/_design.scss
@@ -14,6 +14,23 @@
   padding: 30px;
 
   width: 100%;
+  display: flex;
+  justify-content: space-between;
+  @media screen and (max-width:760px) {
+    display: block;
+  }
+  .block{
+    
+    max-width: 20.375rem;
+
+    @media screen and (max-width:1180px) {
+      max-width: 13.375rem;
+    }
+    @media screen and (max-width:760px) {
+      margin: auto;
+      margin-bottom: 1rem;
+    }
+  }
 
   h2 {
     color: #444444;
