--- a/src/styles/components/_accordions.scss
+++ b/src/styles/components/_accordions.scss
@@ -57,13 +57,13 @@
     //font-size: 1.375rem;
     line-height: 1.5588rem;
     text-align: center;
-
+    display: flex;
 
     &::after {
       content: "";
       display: block;
       // Arrow icon
-      background-image: url("data:image/svg+xml,%3Csvg width='12' height='7' viewBox='0 0 12 7' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L6 6L11 1' stroke='%23000000' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+      background-image: url("/assets/images/acc-plus");
       background-repeat: no-repeat;
       background-position: center;
       background-size: contain;
