--- a/src/styles/components/_case-file.scss
+++ b/src/styles/components/_case-file.scss
@@ -18,12 +18,12 @@
         margin: auto;
         margin-bottom: .75rem;
         max-width: 19.5rem;
-        color: #1F1511;
+        color: $color-white;
 
         @media screen and (min-width:1000px) {  
             font-size: 1.125rem;
             line-height: 1.5625rem;
-            max-width: 21.625rem;
+            max-width: 352.154px;
             margin-top: -19px;
 
         &.modifier{
@@ -41,7 +41,7 @@
         font-size: 1rem;
         line-height: 1.5rem;
         text-decoration-line: underline;
-        color: $color-blue;
+        color: $color-white;
         text-underline-offset: 3px;
         @media screen and (min-width:1000px) {  
             font-size: 21px;
@@ -58,7 +58,7 @@
             font-size: 1rem;
             line-height: 1.5rem;
             margin-left: .3125rem;
-            color: $color-blue;
+            color: $color-white;
 
             @media screen and (min-width:1000px) {  
                 font-size: 21px;
@@ -70,6 +70,8 @@
 
 
 .alp-files{
+    background-image: url('/assets/images/background-stars.png');
+    background-color: $color-black;
     padding-top: 2rem;
     padding-bottom: 3rem;
     
@@ -85,7 +87,7 @@
         line-height: 1.875rem;
         text-align: center;
         text-transform: uppercase;
-        color: $color-blue;
+        color: $color-white;
         max-width: 19.4375rem;
         margin: auto;
         
