--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -6,6 +6,8 @@
   background-size: cover;
 
 
+
+
   &::before {
     content: '';
     position: absolute;
@@ -25,6 +27,11 @@
 
     @media screen and (min-width: 400px) {
       background-size: contain;
+    }
+
+    @media screen and (min-width: 1100px) {
+      background-image: url('/assets/images/header-bg-desktop.png');
+      background-size: 100%;
     }
 
   }
@@ -96,10 +103,10 @@
       position: absolute;
       top: 95%;
       left: 0;
-
       // height: 100vh;
       // overflow-y: scroll;
       padding-top: 0;
+      padding-bottom: 0;
       width: 375px;
       z-index: 3;
 
@@ -148,7 +155,6 @@
 
         &.main__navigation {
 
-
           &::before {
             content: '';
             position: absolute;
@@ -164,6 +170,8 @@
         }
 
         &.secondary__navigation {
+          display: block;
+          margin-top: 5rem;
 
           >* {
             position: relative;
@@ -173,7 +181,7 @@
           &::before {
             content: '';
             position: absolute;
-            top: 0;
+            top: -5.25rem;
             left: 0;
             right: 0;
             margin: auto;
@@ -187,14 +195,87 @@
           &::after {
             content: '';
             position: absolute;
-            top: 0;
+            top: -6.5rem;
             left: 0;
             background-image: url('/assets/images/mobile-secondary-nav-bg.png');
             background-repeat: no-repeat;
+            background-size: cover;
             width: 375px;
             height: 100%;
             z-index: 1;
           }
+
+          .nav__menu_item {
+            &_link {
+              position: relative;
+              color: $color-black;
+              font-size: 1rem;
+              line-height: 1.25rem;
+              text-transform: capitalize;
+              padding-top: 1.25rem;
+            }
+          }
+
+          .nav__menu_item:nth-child(1) {
+            .nav__menu_item_link::before {
+              content: '';
+              position: absolute;
+              top: 70%;
+              left: 0;
+              background-image: url('/assets/images/mobile-secondary-nav-item-1.png');
+              background-repeat: no-repeat;
+              height: 37px;
+              opacity: 0.5;
+              width: 292px;
+              z-index: -1;
+            }
+          }
+
+          .nav__menu_item:nth-child(2) {
+            .nav__menu_item_link::before {
+              content: '';
+              position: absolute;
+              top: 70%;
+              left: 0;
+              background-image: url('/assets/images/mobile-secondary-nav-item-2.png');
+              background-repeat: no-repeat;
+              height: 37px;
+              opacity: 0.5;
+              width: 292px;
+              z-index: -1;
+            }
+          }
+
+          .nav__menu_item:nth-child(3) {
+            .nav__menu_item_link::before {
+              content: '';
+              position: absolute;
+              top: 70%;
+              left: 0;
+              background-image: url('/assets/images/mobile-secondary-nav-item-3.png');
+              background-repeat: no-repeat;
+              height: 37px;
+              opacity: 0.5;
+              width: 203px;
+              z-index: -1;
+            }
+          }
+
+          .nav__menu_item:nth-child(4) {
+            .nav__menu_item_link::before {
+              content: '';
+              position: absolute;
+              top: 100%;
+              left: 0;
+              background-image: url('/assets/images/mobile-secondary-nav-item-4.png');
+              background-repeat: no-repeat;
+              height: 37px;
+              opacity: 0.5;
+              width: 148px;
+              z-index: -1;
+            }
+          }
+
         }
 
         &_item {
@@ -227,7 +308,70 @@
 .header__desktop {
   display: none;
 
+  >* {
+    position: relative;
+    z-index: 3;
+  }
+
   @media screen and (min-width: 1100px) {
     display: grid;
+    grid-template-columns: 240px 1fr;
+    grid-template-rows: repeat(2, 44px);
+    grid-column-gap: 2rem;
+    grid-row-gap: 0px;
+    align-items: flex-start;
   }
+
+  .header__primary_nav {
+    grid-row-start: 2;
+    grid-column-start: 2;
+    grid-row-end: 3;
+    grid-column-end: 3;
+
+    .nav__menu {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+
+      &_item {
+        text-align: center;
+        width: calc(100% / 5);
+
+        &_link {
+          color: $color-white;
+        }
+      }
+    }
+  }
+
+  .logo {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-row-end: 3;
+    grid-column-end: 2;
+  }
+
+  .header__secondary_nav {
+    grid-row-start: 1;
+    grid-column-start: 2;
+    grid-row-end: 2;
+    grid-column-end: 3;
+
+
+    .nav__menu {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+
+      &_item {
+        margin-right: 2.625rem;
+
+        &_link {
+          color: $color-white;
+        }
+      }
+    }
+
+  }
+
 }
