--- a/src/styles/components/_case-file.scss
+++ b/src/styles/components/_case-file.scss
@@ -1,5 +1,5 @@
 .case-file{
-    margin-top: 1rem;
+    margin-top: 2rem;
 
     &__image{
         max-width: 201px;
@@ -24,7 +24,8 @@
             font-size: 1.125rem;
             line-height: 1.5625rem;
             max-width: 352.154px;
-            margin-top: -19px;
+            position: relative;
+            z-index: 2;
 
         &.modifier{
             max-width: 19.75rem;
@@ -46,6 +47,8 @@
         @media screen and (min-width:1000px) {  
             font-size: 21px;
             line-height: 1.8125rem;
+            position: relative;
+            z-index: 2;
         }
     }
 
@@ -100,19 +103,20 @@
             margin-bottom: 2rem;
         }
     }
-
+    
+    
     .case-file__first,
     .case-file__second{
-    @media screen and (min-width:768px) {
-        margin: auto;
-        display: flex;
-        justify-content: space-between;
-        max-width: 42.1875rem;
+        @media screen and (min-width:768px) {
+            margin: auto;
+            display: flex;
+            justify-content: space-between;
+            max-width: 42.1875rem;
+        }
+        @media screen and (min-width:1100px) {
+            max-width: 54.1875rem;
+        }
     }
-    @media screen and (min-width:1100px) {
-        max-width: 54.1875rem;
-    }
-}
 
 .red-string{
     @media screen and (min-width:768px) {
