--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -328,6 +328,24 @@
     max-width: 1100px;
   }
 
+  @media screen and (min-width: 1150px) {
+    grid-template-columns: 255px 1fr;
+  }
+
+  @media screen and (min-width: 1200px) {
+    grid-template-columns: 265px 1fr;
+  }
+
+  @media screen and (min-width: 1250px) {
+    grid-template-columns: 280px 1fr;
+  }
+
+  @media screen and (min-width: 1300px) {}
+
+  @media screen and (min-width: 1365px) {}
+
+  @media screen and (min-width: 1400px) {}
+
   @media screen and (min-width: 1440px) {}
 
   .header__primary_nav {
