--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -338,6 +338,7 @@
 
   @media screen and (min-width: 1250px) {
     grid-template-columns: 280px 1fr;
+    grid-column-gap: 1rem;
   }
 
   @media screen and (min-width: 1300px) {}
