Update Footer Layout

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -42,8 +42,12 @@ const currentYear = new Date().getFullYear();
     <div class="footer__text">
       <p>This website is intended for US healthcare professionals only.</p>
       <p>
+        ALEXION and the Alexion logo are registered trademarks of Alexion
+        Pharmaceuticals, Inc.
+      </p>
+      <p>
         &copy; {currentYear}, Alexion Pharmaceuticals, Inc. All rights reserved.
-        US/UNB-H/0470 V1 03/2023
+        US/UNB-H/0470 V2 04/2023 US/UNB-H/0470 V1 03/2023
       </p>
     </div>
   </div>
