--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   background-color: $color-black;
   border-top: 1px solid $color-white;
-  border-bottom: 1px solid $color-white;
+  // border-bottom: 1px solid $color-white;
   color: $color-black;
 
   &__grid {
