Show Header on Index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Card from "../components/Card.astro";
 import MainHero from "../components/MainHero.astro";
 ---
 
-<Layout title="Welcome" showHeader={false} showISI={false}>
+<Layout title="Welcome" showHeader={true} showISI={false}>
   <MainHero />
   <section class="alp-files">
     <h2 class="files-heading">Read THE case files and collect evidence</h2>
