--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -9,6 +9,12 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
 
+  @media screen and (min-width: 1500px) {
+    .wrapper {
+      max-width: 85.3125rem;
+    }
+  }
+
 
   &::before {
     content: '';
@@ -22,7 +28,6 @@
     width: 100%;
     z-index: 2;
 
-
     @media screen and (min-width: 375px) {
       height: 100%;
     }
@@ -35,11 +40,17 @@
       background-image: url('/assets/images/header-bg-desktop.png');
       background-size: 100% 85px;
       box-shadow: none;
-      top: 1rem;
+      top: 0.5rem;
+    }
+
+    @media screen and (min-width: 1440px) {
+      left: 0;
+      right: 0;
+      margin: auto;
+      width: 1440px;
     }
 
   }
-
 
 }
 
@@ -320,12 +331,12 @@
   @media screen and (min-width: 1100px) {
     display: grid;
     grid-template-columns: 240px 1fr;
-    grid-template-rows: repeat(2, 50px);
+    grid-template-rows: repeat(2, 44px);
     grid-column-gap: 2rem;
     grid-row-gap: 0px;
     align-items: center;
-    margin: 0 auto;
-    max-width: 1100px;
+    // margin: 0 auto;
+    // max-width: 1100px;
   }
 
   @media screen and (min-width: 1150px) {
@@ -337,17 +348,18 @@
   }
 
   @media screen and (min-width: 1250px) {
-    // grid-template-columns: 280px 1fr;
+    grid-template-columns: 300px 1fr;
     grid-column-gap: 1rem;
   }
 
-  @media screen and (min-width: 1300px) {}
+  @media screen and (min-width: 1365px) {
+    grid-template-columns: 300px 1fr;
+    grid-column-gap: 1rem;
+  }
 
-  @media screen and (min-width: 1365px) {}
-
-  @media screen and (min-width: 1400px) {}
-
-  @media screen and (min-width: 1440px) {}
+  @media screen and (min-width: 1440px) {
+    grid-template-columns: 325px 1fr;
+  }
 
   .header__primary_nav {
     grid-row-start: 2;
@@ -364,19 +376,23 @@
         text-align: center;
         width: calc(100% / 5);
 
-        @media screen and (min-width: 1250px) {
+        @media screen and (min-width: 1365px) {
 
+          &:nth-child(2),
+          &:nth-child(3),
           &:nth-child(4),
           &:nth-child(5) {
-            padding-left: 2.5rem;
+            padding-left: 1rem;
           }
         }
 
-        @media screen and (min-width: 1300px) {
+        @media screen and (min-width: 1400px) {
 
+          &:nth-child(2),
+          &:nth-child(3),
           &:nth-child(4),
           &:nth-child(5) {
-            padding-left: 3.75rem;
+            padding-left: 1.5rem;
           }
         }
 
