Update Patient Site Link

--- a/src/components/Navigation/HeaderSecondaryNavigation.astro
+++ b/src/components/Navigation/HeaderSecondaryNavigation.astro
@@ -5,7 +5,11 @@
         <a href="#" class="nav__menu_item_link">Stay Connected</a>
       </li>
       <li class="nav__menu_item">
-        <a href="#" class="nav__menu_item_link">Patient Site</a>
+        <a
+          href="https://hypophosphatasia.com/"
+          class="nav__menu_item_link"
+          target="_blank">Patient Site</a
+        >
       </li>
       <li class="nav__menu_item">
         <a href="#" class="nav__menu_item_link">Patient Case Files</a>
