--- a/src/styles/components/_case-file.scss
+++ b/src/styles/components/_case-file.scss
@@ -1,15 +1,16 @@
-.case-file{
+.case-file {
     margin-top: 2rem;
 
-    &__image{
+    &__image {
         max-width: 201px;
         margin: auto;
-        @media screen and (min-width:1000px) { 
-        max-width: 27.1875rem;
+
+        @media screen and (min-width:1000px) {
+            max-width: 27.1875rem;
         }
     }
 
-    &__text{
+    &__text {
         font-style: normal;
         font-weight: 600;
         font-size: 1rem;
@@ -20,23 +21,24 @@
         max-width: 15.5rem;
         color: $color-white;
 
-        @media screen and (min-width:1000px) {  
+        @media screen and (min-width:1000px) {
             font-size: 1.125rem;
             line-height: 1.5625rem;
             max-width: 352.154px;
             position: relative;
             z-index: 2;
 
-        &.modifier{
-            max-width: 19.75rem;
-            @media screen and (min-width:768px) {  
-            max-width: 23rem;
+            &.modifier {
+                max-width: 19.75rem;
+
+                @media screen and (min-width:768px) {
+                    max-width: 23rem;
+                }
             }
-        }
         }
     }
 
-    &__anchor{
+    &__anchor {
         font-style: normal;
         font-weight: 700;
         font-size: 1rem;
@@ -44,7 +46,8 @@
         text-decoration-line: underline;
         color: $color-white;
         text-underline-offset: 3px;
-        @media screen and (min-width:1000px) {  
+
+        @media screen and (min-width:1000px) {
             font-size: 21px;
             line-height: 1.8125rem;
             position: relative;
@@ -52,18 +55,18 @@
         }
     }
 
-    &__anchor-container{
+    &__anchor-container {
         display: flex;
         justify-content: center;
 
-        span{
+        span {
             font-weight: 700;
             font-size: 1rem;
-            line-height: 1.5rem; 
+            line-height: 1.5rem;
             margin-left: .3125rem;
             color: $color-white;
 
-            @media screen and (min-width:1000px) {  
+            @media screen and (min-width:1000px) {
                 font-size: 21px;
                 line-height: 1.8125rem;
             }
@@ -72,17 +75,19 @@
 }
 
 
-.alp-files{
+.alp-files {
+    position: relative;
     background-image: url('/assets/images/background-stars.png');
     background-color: $color-black;
     padding-top: 2rem;
     padding-bottom: 3rem;
-    
+
     @media screen and (min-width:600px) {
         padding-bottom: 12.2369rem;
-        
+
     }
-    .files-heading{
+
+    .files-heading {
         font-family: 'Oswald';
         font-style: normal;
         font-weight: 700;
@@ -93,57 +98,60 @@
         color: $color-white;
         max-width: 19.4375rem;
         margin: auto;
-        
+
         @media screen and (min-width:768px) {
             max-width: unset;
         }
+
         @media screen and (min-width:1000px) {
             font-size: 2.25rem;
             line-height: 2.8125rem;
             margin-bottom: 2rem;
         }
     }
-    
-    
+
+
     .case-file__first,
-    .case-file__second{
+    .case-file__second {
         @media screen and (min-width:600px) {
             margin: auto;
             display: flex;
             justify-content: space-between;
             max-width: 42.1875rem;
         }
+
         @media screen and (min-width:1100px) {
             max-width: 54.1875rem;
         }
     }
 
-.red-string{
-    display: none;
+    .red-string {
+        display: none;
 
-    @media screen and (min-width:768px) {
-    display: block;
-    position: absolute;
-    width: 1666.19px;
-    height: 327.14px;
-    left: -151px;
-    top: 27.1875rem;
-    border-bottom: 2px solid #CF1C0A;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    transform: rotate(-364.88deg);
-    }
+        @media screen and (min-width:768px) {
+            display: block;
+            border-bottom: 2px solid $color-red;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            position: absolute;
+            height: 327.14px;
+            left: -151px;
+            top: auto;
+            bottom: 7.5rem;
+            transform: rotate(355deg);
+            width: 1666.19px;
+        }
 
-    @media screen and (min-width:1000px) {
-    top: 41.0625rem;
-    }
+        @media screen and (min-width:1000px) {
+            // top: 41.0625rem;
+        }
 
-    @media screen and (min-width:1100px) {
-    top: 49.625rem;
+        @media screen and (min-width:1100px) {
+            // top: 49.625rem;
+        }
+
+        @media screen and (min-width:1490px) {
+            width: 113vw;
+            transform: rotate(-363.88deg);
+        }
     }
-    
-    @media screen and (min-width:1490px) {
-    width: 113vw;
-    transform: rotate(-363.88deg);
-    }
-}
 }
