Fix red strip styles

--- a/src/styles/components/_case-file.scss
+++ b/src/styles/components/_case-file.scss
@@ -151,7 +151,7 @@
 
         @media screen and (min-width:1490px) {
             width: 113vw;
-            transform: rotate(-363.88deg);
+            // transform: rotate(-363.88deg);
         }
     }
 }
