--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -396,6 +396,22 @@
           }
         }
 
+        @media screen and (min-width: 1480px) {
+
+          &:nth-child(4),
+          &:nth-child(5) {
+            padding-left: 1rem;
+          }
+        }
+
+        @media screen and (min-width: 1600px) {
+
+          &:nth-child(4),
+          &:nth-child(5) {
+            padding-left: 0.5rem;
+          }
+        }
+
         &_link {
           color: $color-white;
           font-family: 'Oswald';
