--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -290,7 +290,7 @@ import "../styles/settings/_design.scss";
       <div class="section-wrapper section-wrapper--small">
         <h1 class="title">Accordions</h1>
         <div class="accordion">
-          <Accordion id="1" header="ACC 1" expanded>
+          <Accordion id="1" header="ACC 1">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
               pariatur labore perspiciatis repudiandae aliquid quae doloribus!
