--- a/src/components/ALPDVideo.astro
+++ b/src/components/ALPDVideo.astro
@@ -5,7 +5,7 @@
                 <img src="/assets/images/alpd-video/notebook-desktop.png" alt="">
             </picture>
             <picture class="asset__folder">
-                <source srcset="/assets/images/alpd-video/folder-desktop.png" media="(min-width: 1024px)">
+                <source srcset="/assets/images/alpd-video/folder-desktop.png" media="(min-width: 768px)">
                 <img src="/assets/images/alpd-video/folder-mobile.png" alt="">
             </picture>
             <picture class="asset__backpack">
@@ -18,8 +18,9 @@
         </div>
         <div class="alpd-video__container">
             <div class="video">
+                <button class="video__play-button"></button>
                 <picture>
-                    <source srcset="/assets/images/alpd-video/video-poster-desktop.png" media="(min-width: 1024px)">
+                    <source srcset="/assets/images/alpd-video/video-poster-desktop.png" media="(min-width: 768px)">
                     <source srcset="/assets/images/alpd-video/video-poster-tablet.png" media="(min-width: 500px)">
                     <img src="/assets/images/alpd-video/video-poster-mobile.png" alt="">
                 </picture>
