--- a/src/pages/enter-site.astro
+++ b/src/pages/enter-site.astro
@@ -7,6 +7,6 @@ type Props = {};
 const {} = Astro.props;
 ---
 
-<Layout title="Dev" showHeader={false} showISI={false}>
+<Layout title="Enter-Site" showHeader={false} showISI={false}>
   <EnterSite />
 </Layout>
