--- a/src/components/CookieBanner.astro
+++ b/src/components/CookieBanner.astro
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<script is:inline>
+<script>
   const cookie = document.querySelector(".cookie");
   const cookieButton = document.querySelector(".cookie__button");
 
