--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -291,6 +291,55 @@ import "../styles/settings/_design.scss";
         <h1 class="title">Accordions</h1>
         <div class="accordion">
           <Accordion id="1" header="ACC 1">
+            <h2>h2 title</h2>
+            <h4>h4 title</h4>
+            <h5>h5 title</h5>
+            
+            <ul>
+              <li class="item">class "item"</li>
+              <li class="sub-item">class "sub-item"</li>
+            </ul>
+            
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
+              pariatur labore perspiciatis repudiandae aliquid quae doloribus!
+              Ratione, fugiat quae ad dolor voluptatum esse laborum porro id non
+              animi, sapiente exercitationem.
+            </p>
+
+            <!-- table for accordion content -->
+            <div class="acc-table">
+              <div class="first-column">
+                <h3>TEST</h3>
+                <p>Calcium, mg/dL</p>
+                <p>Protein, g/dL</p>
+                <p>Albumin, g/dL</p>
+                <p>Alkaline phosphatase, IU/L</p>
+              </div>
+              
+              <div class="second-column">
+                <h3>RESULT</h3>
+                <p>9.3</p>
+                <p>7.8</p>
+                <p>4.2</p>
+                <p>138</p>
+              </div>
+              
+              <div class="second-column last-child">
+                <h3>FLAG</h3>
+                <p>9.3</p>
+                <p>7.8</p>
+                <p>4.2</p>
+                <p>138</p>
+              </div>
+            </div>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
+              pariatur labore perspiciatis repudiandae aliquid quae doloribus!
+              Ratione, fugiat quae ad dolor voluptatum esse laborum porro id non
+              animi, sapiente exercitationem.
+            </p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
               pariatur labore perspiciatis repudiandae aliquid quae doloribus!
