--- a/src/styles/components/_accordions.scss
+++ b/src/styles/components/_accordions.scss
@@ -13,24 +13,143 @@
 
     @include transition(max-height, 0.3s, ease-in-out);
 
+    h2{
+      color: $color-red;
+      font-family: 'Oswald';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 1.125rem;
+      line-height: 1.375rem;    
+      text-transform: uppercase;
+    }
+
+    h4{
+      font-family: 'Barlow';
+      font-style: normal;
+      font-weight: 600;
+      font-size: 1.125rem;
+      line-height: 1.5625rem;
+      color: $color-carbon;
+    }
+
+    .item, .sub-item{
+      font-family: 'Barlow';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 1rem;
+      line-height: 1.375rem;
+      color:$color-carbon;
+    }
+
+    .item{
+      margin-left: 1rem;
+    }
+    .sub-item{
+      margin-left: 2.6rem;
+    }
+
+    
     a {
       color: $color-red;
       font-weight: 600;
       text-decoration: underline;
     }
-
+    
     p {
       color: $color-black;
       padding-bottom: 1rem;
+      font-family: 'Barlow';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 1rem;
+      line-height: 1.375rem;
     }
 
     p:not(:last-of-type) {
       margin-bottom: 1rem;
     }
+
+    h5{
+      font-family: 'Barlow';
+      font-style: normal;
+      font-weight: 600;
+      font-size: 1.125rem;
+      line-height: 1.5625rem;
+      text-decoration-line: underline;
+      color: $color-red;
+    }
+
+    .acc-table{
+      display: flex;
+
+      p{
+        border-top: 1px solid $color-black;
+        
+        padding: 0;
+        padding-right: .8125rem;
+      padding-left: .8125rem;
+      padding-top: 10px;
+      padding-bottom: 10px;
+        margin: 0;
+      }
+      h3{
+        padding-top: 10px;
+        font-family: 'veneer';
+        text-align: center;
+        font-weight: 400;
+        font-size: 1.125rem;
+        background: rgba(82, 108, 173, 0.3);
+      }
+
+      .last-child{
+        border-right: 1px solid $color-black!important;
+      }
+    }
+
+    .first-column{
+      padding-bottom: 0;
+      border: 1px solid $color-black;
+      border-right: none;
+
+      p{
+        font-family: 'Oswald';
+        font-style: normal;
+        font-weight: 400;
+        font-size: .875rem;
+        line-height: 1.3125rem;
+        color:$color-black;
+      }
+      
+
+    }
+    .second-column{
+      width: 4rem;
+      text-align: center;
+      padding-bottom: 0;
+      border: 1px solid $color-black;
+      border-right: none;
+
+      p{
+        font-family: 'Barlow';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 1.3125rem;
+        color:$color-black;
+
+        display: flex;
+        justify-content: center;
+        margin: auto;
+      }
+    }
   }
 
   [aria-expanded="true"] {
     background: none;
+    height: auto;;
+    .accordion__item_title{
+      color: $color-red;
+    }
 
     .accordion__item_content {
       max-height: 500px;
@@ -45,7 +164,8 @@
   &__item {
     background: none;
     border: 1px solid $color-black;
-  
+    border-top: .9px solid $color-black;
+    border-bottom: .7px solid $color-black;
     padding-top: .9331rem;
     padding-right: 1.6875rem;
     padding-left: 1.6875rem; 
