elements inside the accordion created

--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -346,6 +346,10 @@ import "../styles/settings/_design.scss";
               Ratione, fugiat quae ad dolor voluptatum esse laborum porro id non
               animi, sapiente exercitationem.
             </p>
+
+            
+            <img src="/assets/images/acc-image-sample.png" alt="" class="acc-mobile-image">
+            <small>This is a -small- tag for images descriptions. Image above has class "acc-mobile-image"</small>
           </Accordion>
           <Accordion id="2" header="ACC 2">
             <p>
