--- a/src/styles/components/_accordions.scss
+++ b/src/styles/components/_accordions.scss
@@ -42,10 +42,10 @@
     }
 
     .item{
-      margin-left: 1rem;
+      margin-left: 27px;
     }
     .sub-item{
-      margin-left: 2.6rem;
+      margin-left: 49.6px;
     }
 
     
@@ -57,7 +57,7 @@
     
     p {
       color: $color-black;
-      padding-bottom: 1rem;
+      //padding-bottom: 1rem;
       font-family: 'Barlow';
       font-style: normal;
       font-weight: 400;
@@ -66,7 +66,7 @@
     }
 
     p:not(:last-of-type) {
-      margin-bottom: 1rem;
+      //margin-bottom: 1rem;
     }
 
     h5{
@@ -142,6 +142,18 @@
         margin: auto;
       }
     }
+
+    .acc-mobile-image{
+      max-width: 7.8125rem;
+    }
+
+    small{
+      font-family: 'Barlow';
+      font-style: normal;
+      font-weight: 400;
+      font-size: .875rem;
+      line-height: 1.3125rem;
+    }
   }
 
   [aria-expanded="true"] {
@@ -152,7 +164,7 @@
     }
 
     .accordion__item_content {
-      max-height: 500px;
+      max-height: 100%;
     }
 
     .accordion__item_title::after {
@@ -164,8 +176,8 @@
   &__item {
     background: none;
     border: 1px solid $color-black;
-    border-top: .9px solid $color-black;
-    border-bottom: .7px solid $color-black;
+    border-top: 0;
+    border-bottom: 1px solid $color-black;
     padding-top: .9331rem;
     padding-right: 1.6875rem;
     padding-left: 1.6875rem; 
@@ -186,6 +198,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-left: .625rem;
+    padding-right: .625rem;
 
      &::after {
       content: "";
@@ -202,4 +216,10 @@
 
   }
 
+}
+
+.accordion__item{
+  &:first-child{
+    border-top: 1px solid $color-black;   
+  }
 }
