--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -333,6 +333,8 @@ import "../styles/settings/_design.scss";
                 <p>138</p>
               </div>
             </div>
+            <!-- table for accordion content -->
+            
 
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
