--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -10,7 +10,7 @@ input {
     color: currentColor;
     width: 2rem;
     height: 2rem;
-    border: 3px solid currentColor;
+    border: 2px solid currentColor;
     transform: translateY(-0.075em);
 
     display: flex;
@@ -45,9 +45,33 @@ input {
     position: relative;
 
     &:checked {
-      background-color: currentColor;
-      border-color: currentColor;
+        background-color: currentColor;
+        border-color: currentColor;
+      }
+
+    &::before {
+        content: "";
+        position: absolute;
+        transition: 120ms transform ease-in-out;
+        border: solid transparent;
+
+        right: 50%;
+        top: 45%;
+        width: 7px;
+        height: 15px;
+
+        border-width: 0 2px 2px 0;
+        margin: -1px -1px 0 -1px;
+        transform: rotate(45deg) translate(-50%, -50%);
+        z-index: 2;
     }
+
+    &:checked {
+        &::before {
+          border: solid $color-white;
+          border-width: 0 2px 2px 0;
+        }
+      }
   }
 }
 
@@ -55,7 +79,7 @@ input {
   display: block;
   position: relative;
   padding-bottom: 0;
-  margin-bottom: 2rem;
+  margin-bottom: .75rem;
 
   transition: all 100ms ease-in-out;
 
@@ -87,33 +111,22 @@ input {
     }
   }
 
-  &[data-required="true"] {
-
-    .form__control-label::after,
-    .form__control-legend::after {
-      content: '*';
-      color: $color-red;
-      display: inline-block;
-      margin-left: .25rem;
-    }
-  }
-
   .form__control-input {
-    height: 2.9375rem;
-    padding: .625rem 1.875rem;
-    background-color: $color-white;
+    height: 2rem;
+    padding: .3125rem 0;
+    background-color: transparent;
     width: 100%;
 
-    outline: 1px solid $color-black;
+    border-bottom: 1px solid $color-envelop;
 
     color: $color-black;
     font-size: 1.125rem;
     font-weight: 300;
 
     &::placeholder {
-      color: $color-black;
+      color: $color-granite-grey;
       font-size: 1.125rem;
-      font-weight: 300;
+      font-weight: 500;
     }
   }
 
@@ -167,7 +180,7 @@ input {
 
     .form__control-label {
       font-size: 1rem;
-      font-weight: 300;
+      font-weight: 400;
       line-height: 17.5px;
       cursor: pointer;
 
@@ -194,4 +207,68 @@ input {
       }
     }
   }
+}
+
+.form__control-files {
+    display: flex;
+    align-items: baseline;
+    margin-bottom: 1.5rem;
+    margin-top: 1.5rem;
+}
+
+.form__control-file {
+    .form__control-input-file {
+        height: 2.375rem;
+        width: max-content;
+        background: transparent;
+        border-radius: .25rem;
+        border: 1px solid $color-red;
+
+        padding: .5rem 1rem;
+        margin-bottom: .5rem;
+
+        display: flex;
+        align-items: center;
+
+        input[type="file"] {
+            display: none;
+        }
+
+        label {
+            font-family: Inter, Arial, Helvetica, sans-serif;
+            font-weight: 600;
+            color: $color-red;
+            display: flex;
+            cursor: pointer;
+            font-size: .8125rem;
+            line-height: 13px;
+
+            align-items: center;
+
+            &::after {
+                margin-left: .5rem;
+            }
+        }
+
+        &--take {
+            label::after {
+                content: url("/assets/icons/camera-red.svg");
+            }
+        }
+
+        &--upload {
+            label::after {
+                content: url("/assets/icons/upload-red.svg");
+            }
+        }
+    }
+
+    .form__control-label {
+        color: $color-granite-grey;
+        font-weight: 500;
+    }
+}
+
+label a {
+    font-weight: 400;
 }
